fixed stand alone build added gitignore